# OpenRV

./: .clang-format  .clang-format-ignore  .clang-tidy  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .markdownlint.yaml  .pre-commit-config.yaml  .readthedocs.yaml  .release-please-manifest.json  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  COMMITERS.md  CONTRIBUTING.md  CONTRIBUTORS.md  DEPENDENCIES_REPOS.txt  GOVERNANCE.md  LICENSE  MIGRATION_PLAN.md  Notice.txt  README.md  SECURITY.md  THIRD-PARTY.md  TODO.md  VISTO_STRATEGY.md  apply_qt_fix.sh  build.sh  check_dependency_versions.py  cliff.toml  cmake-format.json  conanfile.py  imgui.ini  openrvcore-conanfile.py  qt_fix.patch  release-please-config.json  requirements.txt  ruff.toml  rvcmds.sh  (+1 more)
cmake/dependencies/: CMakeLists.txt  aja.cmake  atomic_ops.cmake  bmd.cmake  boost.cmake  breakpad.cmake  crashpad.cmake  dav1d.cmake  doctest.cmake  expat.cmake  ffmpeg.cmake  gc.cmake  glew.cmake  imath.cmake  imgui.cmake  jpegturbo.cmake  libdeflate.cmake  mesagl.cmake  nanobind.cmake  ocio.cmake  oiio.cmake  openexr.cmake  openjpeg.cmake  openjph.cmake  openssl.cmake  pcre2.cmake  png.cmake  prores.cmake  pyimgui.cmake  pyimplot.cmake  python3.cmake  qt5.cmake  qt6.cmake  raw.cmake  spdlog.cmake  tiff.cmake  vcpkg.cmake  vulkan.cmake  webp.cmake  yaml-cpp.cmake  (+1 more)
cmake/dependencies/imgui/: CMakeLists.txt  CMakeLists_PyImGUI.cmake  CMakeLists_PyImplot.cmake  pybind_imgui_module.cpp  pybind_implot_module.cpp
cmake/dependencies/patch/: OPENEXR_README.md  crashpad_http_transport_disabled.cc  crashpad_linux_disable_http_transport.patch  imgui_cpp_h.patch  imgui_impl_qt.cpp.patch  nanobind.windows.debug.patch  openexr_3.1.7_invalid_to_black.patch  openexr_3.2.4_invalid_to_black.patch  pybind_imgui.cpp.patch  pyopengl-accelerate.patch  python.3.11.get_externals.bat.patch  python.3.11.python.props.patch  zconf.h.cmakein_prevent_invalid_inclusions.patch  zconf.h.in_prevent_invalid_inclusions.patch  zlib_Prevent-invalid-inclusions-when-HAVE_-is-set-to-0.patch
cmake/dependencies/patch/python-3.11.9/: python.3.11.9.openssl.props.patch
cmake/install/: CMakeLists.txt  install.cmake  post_install.cmake  post_install_darwin.cmake  pre_install.cmake  pre_install_darwin.cmake  pre_install_linux.cmake  pre_install_windows.cmake
src/: CMakeLists.txt
src/lib/: CMakeLists.txt
src/lib/app/: CMakeLists.txt
src/lib/app/DarwinBundle/: CMakeLists.txt  DarwinBundle.mm
src/lib/app/EventMediaLibrary/: CMakeLists.txt  EventMediaLibrary.cpp
src/lib/app/ImGuiPythonBridge/: CMakeLists.txt  ImGuiPythonBridge.cpp  ImGuiPythonBridge.h
src/lib/app/MuTwkApp/: CMakeLists.txt  CommandsModule.cpp  CrashHandlerInit.cpp  EventType.cpp  FunctionAction.cpp  MenuItem.cpp  MenuState.cpp  MuCrashObserver.cpp  MuInterface.cpp  SettingsValueType.cpp
src/lib/app/OutputVideoDevices/: CMakeLists.txt  OutputVideoDevice.cpp  OutputVideoDeviceModule.cpp
src/lib/app/PyMediaLibrary/: CMakeLists.txt  PyMediaLibrary.cpp  PyMediaNode.cpp  PyNode.cpp  PyRootNode.cpp
src/lib/app/PyTwkApp/: CMakeLists.txt  PyCommands.cpp  PyEventType.cpp  PyFunctionAction.cpp  PyInterface.cpp  PyMenuItemType.cpp  PyMenuState.cpp  PyMu.cpp  PyMuSymbolType.cpp
src/lib/app/QTBundle/: CMakeLists.txt  QTBundle.cpp
src/lib/app/RvApp/: CMakeLists.txt  CommandsModule.cpp  FileSpaceLinearizeIPNode.cpp  FormatIPNode.cpp  Options.cpp  PyCommandsModule.cpp  RvGraph.cpp  RvNodeDefinitions.cpp  RvSession.cpp  RvViewGroupIPNode.cpp
src/lib/app/RvCommon/: CGDesktopVideoDevice.cpp  CGDesktopVideoDeviceArm.cpp  CMakeLists.txt  DeepColorSupport.mm  DesktopVideoDevice.cpp  DesktopVideoModule.cpp  DiagnosticsView.Roboto_Regular  DiagnosticsView.cpp  DisplayLink.cpp  FileTypeTraits.cpp  GLSLSyntaxHighlighter.cpp  GLView.cpp  InitGL.cpp  MediaDirModel.cpp  MediaFileTypes.cpp  MetalCpuFallback.md  MetalView.mm  MuUICommands.cpp  PermDelegate.cpp  PyUICommands.cpp  QAlertPanel.cpp  QAlertPanel.h  QTDesktopVideoDevice.cpp  QTFrameBuffer.cpp  QTGLVideoDevice.cpp  QTMetalVideoDevice.mm  QTTranslator.cpp  QTUtils.cpp  QTVulkanVideoDevice.cpp  README.md  RvApplication.cpp  RvBottomViewToolBar.cpp  RvBottomViewToolBarBuild.cpp  RvConsoleApplication.cpp  RvConsoleWindow.cpp  RvDocument.cpp  RvDocument_debug.patch  RvFileDialog.cpp  RvJavaScriptObject.cpp  RvNetworkDialog.cpp  (+25 more)
src/lib/app/RvPackage/: CMakeLists.txt  PackageManager.cpp
src/lib/app/TLICommon/: CMakeLists.txt
src/lib/app/TwkApp/: Action.cpp  Application.cpp  Bundle.cpp  CMakeLists.txt  Command.cpp  Document.cpp  Event.cpp  EventNode.cpp  EventTable.cpp  Exception.cpp  Menu.cpp  Mode.cpp  OutputPlugin.cpp  OutputPlugins.cpp  Selection.cpp  SelectionState.cpp  SelectionType.cpp  VideoDevice.cpp  VideoModule.cpp
src/lib/app/TwkMediaLibrary/: CMakeLists.txt  Library.cpp
src/lib/app/TwkQtBase/: CMakeLists.txt  QtUtil.cpp
src/lib/app/mu_rvui/: CMakeLists.txt  HUD.mu  app_utils.mu  commands.mud  encoding.mud  export_utils.mu  external_ioprocess.mu  external_qprocess.mu  extra_commands.mu  gl.mud  gltext.mud  gltexture.mu  glu.mud  glyph.mu  glyph2.mu  help_mode.mu  inspector.mu  io.mud  lutgen.mu  math.mud  (+16 more)
src/lib/audio/: CMakeLists.txt
src/lib/base/: CMakeLists.txt
src/lib/files/: CMakeLists.txt
src/lib/geometry/: CMakeLists.txt
src/lib/graphics/: CMakeLists.txt
src/lib/image/: CMakeLists.txt
src/lib/ip/: CMakeLists.txt
src/lib/mu/: CMakeLists.txt
src/lib/network/: CMakeLists.txt
src/lib/python/: CMakeLists.txt
src/lib/qt/: CMakeLists.txt
src/lib/ui/: CMakeLists.txt
src/plugins/: CMakeLists.txt
src/plugins/output/: CMakeLists.txt
src/plugins/python/: CMakeLists.txt
src/plugins/rv-packages/: CMakeLists.txt
src/test/: CMakeLists.txt
src/test/CrashDumpSmokeTest/: CMakeLists.txt  crash_dump_smoke_test.py
src/test/CrashHandlerTest/: CMakeLists.txt  main.cpp
src/test/FastMemcpyTest/: CMakeLists.txt  TestFastMemcpy.cpp  TestFastMemcpy.h  main.cpp
src/test/IPCore/: CMakeLists.txt
src/test/LoadingSharedLibrariesTest/: CMakeLists.txt  main.cpp
src/test/QFontTest/: CMakeLists.txt  qtfont.cpp
(+5745 files in other folders)
