#
# Copyright (C) 2022  Autodesk, Inc. All Rights Reserved.
#
# SPDX-License-Identifier: Apache-2.0
#

ADD_SUBDIRECTORY(base)
ADD_SUBDIRECTORY(mu)
ADD_SUBDIRECTORY(app)
ADD_SUBDIRECTORY(audio)
ADD_SUBDIRECTORY(image)
ADD_SUBDIRECTORY(geometry)
ADD_SUBDIRECTORY(ip)
ADD_SUBDIRECTORY(files)
ADD_SUBDIRECTORY(ui)
ADD_SUBDIRECTORY(qt)
ADD_SUBDIRECTORY(graphics)
ADD_SUBDIRECTORY(network)
ADD_SUBDIRECTORY(python)