#
# Copyright (C) 2022  Autodesk, Inc. All Rights Reserved.
#
# SPDX-License-Identifier: Apache-2.0
#
ADD_SUBDIRECTORY(TwkFB)
ADD_SUBDIRECTORY(TwkMovie)
ADD_SUBDIRECTORY(TwkFBAux)
ADD_SUBDIRECTORY(TwkImg)
ADD_SUBDIRECTORY(IOgto)
ADD_SUBDIRECTORY(IOproxy)
ADD_SUBDIRECTORY(MovieProcedural)
ADD_SUBDIRECTORY(MovieProxy)
ADD_SUBDIRECTORY(MovieSideCar)
ADD_SUBDIRECTORY(TwkCMS)
ADD_SUBDIRECTORY(MovieFB)
ADD_SUBDIRECTORY(MovieFFMpeg)
ADD_SUBDIRECTORY(MovieMistika)
ADD_SUBDIRECTORY(MovieMuDraw)
ADD_SUBDIRECTORY(MovieRV_FBO)
IF(RV_TARGET_LINUX)
  ADD_SUBDIRECTORY(MovieRV)
ENDIF()
ADD_SUBDIRECTORY(MovieStdinFB)
ADD_SUBDIRECTORY(io_mray)
ADD_SUBDIRECTORY(IOtarga)
ADD_SUBDIRECTORY(IOsgi)
ADD_SUBDIRECTORY(io_raw)
ADD_SUBDIRECTORY(io_dpx)
ADD_SUBDIRECTORY(IOrla)
ADD_SUBDIRECTORY(io_cin)
ADD_SUBDIRECTORY(IOpng)
IF(RV_TARGET_DARWIN)
  ADD_SUBDIRECTORY(IONSImage)
  ADD_SUBDIRECTORY(io_nsimage)
ENDIF()
ADD_SUBDIRECTORY(io_yuv)
ADD_SUBDIRECTORY(IOmray)
ADD_SUBDIRECTORY(IOexr)
ADD_SUBDIRECTORY(IOz)
ADD_SUBDIRECTORY(IOoiio)
ADD_SUBDIRECTORY(IOsoftimage)
ADD_SUBDIRECTORY(io_gto)
ADD_SUBDIRECTORY(io_z)
ADD_SUBDIRECTORY(io_exr)
ADD_SUBDIRECTORY(io_jpeg)
ADD_SUBDIRECTORY(io_rgbe)
ADD_SUBDIRECTORY(mp4v2Utils)
ADD_SUBDIRECTORY(IOyuv)
ADD_SUBDIRECTORY(io_png)
ADD_SUBDIRECTORY(io_tiff)
ADD_SUBDIRECTORY(IOjpeg)
ADD_SUBDIRECTORY(IOcin)
ADD_SUBDIRECTORY(IOrgbe)
ADD_SUBDIRECTORY(io_rla)
ADD_SUBDIRECTORY(io_targa)
ADD_SUBDIRECTORY(IOdpx)
ADD_SUBDIRECTORY(IOraw)
ADD_SUBDIRECTORY(IOtiff)
ADD_SUBDIRECTORY(io_sgi)
ADD_SUBDIRECTORY(io_oiio)
ADD_SUBDIRECTORY(mio_ffmpeg)
ADD_SUBDIRECTORY(mio_stdinfb)
ADD_SUBDIRECTORY(mio_mistika)
