#
# Copyright (C) 2022  Autodesk, Inc. All Rights Reserved.
#
# SPDX-License-Identifier: Apache-2.0
#
ADD_SUBDIRECTORY(Mu)
ADD_SUBDIRECTORY(MuLang)
ADD_SUBDIRECTORY(mu_gl)
ADD_SUBDIRECTORY(MuPy)
ADD_SUBDIRECTORY(MuGL)
ADD_SUBDIRECTORY(mu_glu)
ADD_SUBDIRECTORY(MuAutoDoc)
ADD_SUBDIRECTORY(MuGLU)
ADD_SUBDIRECTORY(MuGLText)

IF(RV_VFX_PLATFORM STREQUAL CY2023)
  ADD_SUBDIRECTORY(MuQt5)
ELSEIF(RV_VFX_PLATFORM STREQUAL CY2024)
  ADD_SUBDIRECTORY(MuQt6)
ENDIF()

ADD_SUBDIRECTORY(MuEncoding)
ADD_SUBDIRECTORY(MuIO)
ADD_SUBDIRECTORY(MuImage)
ADD_SUBDIRECTORY(MuMathLinear)
ADD_SUBDIRECTORY(MuSystem)
ADD_SUBDIRECTORY(mu_test)
ADD_SUBDIRECTORY(mu_encoding)
ADD_SUBDIRECTORY(mu_glText)
ADD_SUBDIRECTORY(mu_python)
ADD_SUBDIRECTORY(mu_io)
ADD_SUBDIRECTORY(mu_math_linear)
ADD_SUBDIRECTORY(mu_qt)
ADD_SUBDIRECTORY(mu_image)
ADD_SUBDIRECTORY(mu_autodoc)
ADD_SUBDIRECTORY(mu_system)
